# Android-OpenCv-OpenGL

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgerenderer/: EdgeApp.kt  MainActivity.kt
app/src/main/java/com/example/edgerenderer/camera/: CameraController.kt  YuvUtils.kt
app/src/main/java/com/example/edgerenderer/nativebridge/: NativeBridge.kt
app/src/main/java/com/example/edgerenderer/rendering/: EdgeSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gl/: build.gradle
gl/src/main/java/com/example/edgerenderer/gl/: EdgeRenderer.kt  ShaderProgram.kt
jni/include/: EdgeProcessor.h
jni/src/: EdgeProcessor.cpp
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/src/: main.ts
